Overflow fixes

--- a/less/admin/ExtensionPage.less
+++ b/less/admin/ExtensionPage.less
@@ -146,7 +146,7 @@
       display: none;
     }
 
-    > .container {
+    .PermissionGrid {
       overflow-x: scroll;
       padding-bottom: 20px;
     }
